--- a/XenAdmin/Controls/Ballooning/VMMemoryControlsBasic.zh-CN.resx
+++ b/XenAdmin/Controls/Ballooning/VMMemoryControlsBasic.zh-CN.resx
@@ -382,7 +382,7 @@
     <value>8</value>
   </data>
   <data name="linkInstallTools.Text" xml:space="preserve">
-    <value>立即安装 [XenServer product] Tools</value>
+    <value>立即安装 [XCP-ng product] Tools</value>
   </data>
   <data name="&gt;&gt;linkInstallTools.Name" xml:space="preserve">
     <value>linkInstallTools</value>
