--- a/XenAdmin/Dialogs/AboutDialog.resx
+++ b/XenAdmin/Dialogs/AboutDialog.resx
@@ -298,7 +298,7 @@
     <value>19</value>
   </data>
   <data name="licenseDetailsLabel.Text" xml:space="preserve">
-    <value>[XenServer product] licensed to:</value>
+    <value>[XCP-ng product] licensed to:</value>
   </data>
   <data name="&gt;&gt;licenseDetailsLabel.Name" xml:space="preserve">
     <value>licenseDetailsLabel</value>
