--- a/XenAdmin/MainWindow.zh-CN.resx
+++ b/XenAdmin/MainWindow.zh-CN.resx
@@ -2404,7 +2404,7 @@
     <value>246, 22</value>
   </data>
   <data name="installToolsToolStripMenuItem.Text" xml:space="preserve">
-    <value>安装 [XenServer product] Tools(&amp;X)</value>
+    <value>安装 [XCP-ng product] Tools(&amp;X)</value>
   </data>
   <data name="sendCtrlAltDelToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>246, 22</value>
@@ -2710,7 +2710,7 @@
     <value>197, 22</value>
   </data>
   <data name="xenSourceOnTheWebToolStripMenuItem.Text" xml:space="preserve">
-    <value>Web 上的 [XenServer product](&amp;W)</value>
+    <value>Web 上的 [XCP-ng product](&amp;W)</value>
   </data>
   <data name="xenCenterPluginsOnlineToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>192, 22</value>
