--- a/XenModel/FriendlyNames.ja.resx
+++ b/XenModel/FriendlyNames.ja.resx
@@ -544,7 +544,7 @@
     <value>ライセンス</value>
   </data>
   <data name="Label-host.edition-free" xml:space="preserve">
-    <value>[XenServer product]</value>
+    <value>[XCP-ng product]</value>
   </data>
   <data name="Label-host.enabled" xml:space="preserve">
     <value>有効</value>
@@ -1026,7 +1026,7 @@
     <value>プール内でのパフォーマンス統計値の同期に一時的な障害が発生しました。一部のサーバーがオフラインであることが考えられます。</value>
   </data>
   <data name="Message.body-license_does_not_support_pooling" xml:space="preserve">
-    <value>サーバー '{0}' のライセンスが変更されたか有効期限が切れました。このため、[XenServer product] Enterprise の機能は使用できなくなりました。</value>
+    <value>サーバー '{0}' のライセンスが変更されたか有効期限が切れました。このため、[XCP-ng product] Enterprise の機能は使用できなくなりました。</value>
   </data>
   <data name="Message.body-license_expired" xml:space="preserve">
     <value>{0} のライセンスの有効期限が切れました。</value>
@@ -1440,7 +1440,7 @@
     <value>{0} のローカル ストレージ</value>
   </data>
   <data name="SR.name_description-xenserver-tools" xml:space="preserve">
-    <value>[XenServer product] Tools ISO</value>
+    <value>[XCP-ng product] Tools ISO</value>
   </data>
   <data name="SR.name_label-ebs" xml:space="preserve">
     <value>EBS</value>
@@ -1467,7 +1467,7 @@
     <value>{0} のローカル ストレージ</value>
   </data>
   <data name="SR.name_label-xenserver-tools" xml:space="preserve">
-    <value>[XenServer product] Tools</value>
+    <value>[XCP-ng product] Tools</value>
   </data>
   <data name="VM.TemplateDescription-Demo Linux VM" xml:space="preserve">
     <value>このテンプレートを使用して、デモ用またはテスト用のビルトイン Linux ディストリビューションが動作する Linux 仮想マシンを作成できます。業務での使用は推奨されません。</value>
@@ -1533,10 +1533,10 @@
     <value>解放されるメモリ (概算値)</value>
   </data>
   <data name="Label-host.edition-per-socket" xml:space="preserve">
-    <value>[XenServer product] Per-Socket</value>
+    <value>[XCP-ng product] Per-Socket</value>
   </data>
   <data name="Label-host.edition-xendesktop" xml:space="preserve">
-    <value>[XenServer product] for XenDesktop</value>
+    <value>[XCP-ng product] for XenDesktop</value>
   </data>
   <data name="Message.help-extauth_init_in_host_failed" xml:space="preserve">
     <value>AD のヘルプ</value>
@@ -1608,13 +1608,13 @@
     <value>ライセンス サーバーのバージョンが古すぎます。</value>
   </data>
   <data name="Label-host.edition-enterprise-per-socket" xml:space="preserve">
-    <value>[XenServer product] Enterprise Per-Socket</value>
+    <value>[XCP-ng product] Enterprise Per-Socket</value>
   </data>
   <data name="Label-host.edition-enterprise-per-user" xml:space="preserve">
-    <value>[XenServer product] Enterprise Per-User</value>
+    <value>[XCP-ng product] Enterprise Per-User</value>
   </data>
   <data name="Label-host.edition-standard-per-socket" xml:space="preserve">
-    <value>[XenServer product] Standard Per-Socket</value>
+    <value>[XCP-ng product] Standard Per-Socket</value>
   </data>
   <data name="Message.help-license_expired" xml:space="preserve">
     <value>ライセンスのヘルプ</value>
@@ -1737,10 +1737,10 @@
     <value>ボリューム マネージャーのログ</value>
   </data>
   <data name="Label-host.edition-premium" xml:space="preserve">
-    <value>[Company] [XenServer product] Ultimate Edition</value>
+    <value>[Company] [XCP-ng product] Ultimate Edition</value>
   </data>
   <data name="Label-host.edition-basic" xml:space="preserve">
-    <value>[Company] [XenServer product] Basic Edition</value>
+    <value>[Company] [XCP-ng product] Basic Edition</value>
   </data>
   <data name="Label-host.system_status-xscontainer" xml:space="preserve">
     <value>コンテナー管理のログ</value>
@@ -1752,7 +1752,7 @@
     <value>接続テスト</value>
   </data>
   <data name="Label-host.edition-standard" xml:space="preserve">
-    <value>[Company] [XenServer product] Standard Edition</value>
+    <value>[Company] [XCP-ng product] Standard Edition</value>
   </data>
   <data name="Label-Pool_patch.required-updates" xml:space="preserve">
     <value>必要なアップデート</value>
