--- a/XenModel/FriendlyNames.resx
+++ b/XenModel/FriendlyNames.resx
@@ -547,7 +547,7 @@
     <value>License</value>
   </data>
   <data name="Label-host.edition-free" xml:space="preserve">
-    <value>[XenServer product]</value>
+    <value>[XCP-ng product]</value>
   </data>
   <data name="Label-host.enabled" xml:space="preserve">
     <value>Enabled</value>
@@ -1029,7 +1029,7 @@
     <value>There was a temporary failure synchronizing performance statistics across the pool, probably because one or more servers were offline.  Another synchronization attempt will be made later.</value>
   </data>
   <data name="Message.body-license_does_not_support_pooling" xml:space="preserve">
-    <value>The license on server '{0}' has expired or been changed, and no longer supports [XenServer product] Enterprise features.</value>
+    <value>The license on server '{0}' has expired or been changed, and no longer supports [XCP-ng product] Enterprise features.</value>
   </data>
   <data name="Message.body-license_expired" xml:space="preserve">
     <value>The license for {0} has expired.</value>
@@ -1443,7 +1443,7 @@
     <value>Local storage on {0}</value>
   </data>
   <data name="SR.name_description-xenserver-tools" xml:space="preserve">
-    <value>[XenServer product] Tools ISOs</value>
+    <value>[XCP-ng product] Tools ISOs</value>
   </data>
   <data name="SR.name_label-ebs" xml:space="preserve">
     <value>EBS</value>
@@ -1470,7 +1470,7 @@
     <value>Local storage on {0}</value>
   </data>
   <data name="SR.name_label-xenserver-tools" xml:space="preserve">
-    <value>[XenServer product] Tools</value>
+    <value>[XCP-ng product] Tools</value>
   </data>
   <data name="VM.TemplateDescription-Demo Linux VM" xml:space="preserve">
     <value>This template can be used to create a Linux VM with a built-in Linux distribution for testing and demonstration purposes. It is not recommended for production use.</value>
@@ -1536,10 +1536,10 @@
     <value>Potential Reclaimed Memory</value>
   </data>
   <data name="Label-host.edition-per-socket" xml:space="preserve">
-    <value>[XenServer product] Per-Socket</value>
+    <value>[XCP-ng product] Per-Socket</value>
   </data>
   <data name="Label-host.edition-xendesktop" xml:space="preserve">
-    <value>[XenServer product] for XenDesktop</value>
+    <value>[XCP-ng product] for XenDesktop</value>
   </data>
   <data name="Message.help-extauth_init_in_host_failed" xml:space="preserve">
     <value>Help on AD</value>
@@ -1611,13 +1611,13 @@
     <value>The license server is an out-of-date version.</value>
   </data>
   <data name="Label-host.edition-enterprise-per-socket" xml:space="preserve">
-    <value>[XenServer product] Enterprise Per-Socket</value>
+    <value>[XCP-ng product] Enterprise Per-Socket</value>
   </data>
   <data name="Label-host.edition-enterprise-per-user" xml:space="preserve">
-    <value>[XenServer product] Enterprise Per-User</value>
+    <value>[XCP-ng product] Enterprise Per-User</value>
   </data>
   <data name="Label-host.edition-standard-per-socket" xml:space="preserve">
-    <value>[XenServer product] Standard Per-Socket</value>
+    <value>[XCP-ng product] Standard Per-Socket</value>
   </data>
   <data name="Message.help-license_expired" xml:space="preserve">
     <value>Help on Licensing</value>
@@ -1740,10 +1740,10 @@
     <value>Volume manager logs</value>
   </data>
   <data name="Label-host.edition-premium" xml:space="preserve">
-    <value>[Company] [XenServer product] Ultimate Edition</value>
+    <value>[Company] [XCP-ng product] Ultimate Edition</value>
   </data>
   <data name="Label-host.edition-basic" xml:space="preserve">
-    <value>[Company] [XenServer product] Basic Edition</value>
+    <value>[Company] [XCP-ng product] Basic Edition</value>
   </data>
   <data name="Label-host.system_status-xscontainer" xml:space="preserve">
     <value>Container management logs</value>
@@ -1755,7 +1755,7 @@
     <value>Connection test</value>
   </data>
   <data name="Label-host.edition-standard" xml:space="preserve">
-    <value>[Company] [XenServer product] Standard Edition</value>
+    <value>[Company] [XCP-ng product] Standard Edition</value>
   </data>
   <data name="Label-Pool_patch.required-updates" xml:space="preserve">
     <value>Required Updates</value>
